--- a/src/ResumeEditor.Console/ResumeEditor.Console.csproj
+++ b/src/ResumeEditor.Console/ResumeEditor.Console.csproj
@@ -11,4 +11,10 @@
     <ProjectReference Include="..\ResumeEditor.BusinessLogic\ResumeEditor.BusinessLogic.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Reference Include="itextsharp">
+      <HintPath>bin\Debug\net6.0\itextsharp.dll</HintPath>
+    </Reference>
+  </ItemGroup>
+
 </Project>
